--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <span class="popis1 popis">stav</span><span class="popis2 popis">úkol</span><span class="popis3 popis">popis</span>
 
-            <div class="odkaz"><div class="ok"></div><a href="ukol-01/src/pages/index.html">ÚKOL 01</a><span>popis úkolu</span></div>
+            <div class="odkaz"><div class="ok"></div><a href="ukol-01/src/pages/index.html">ÚKOL 01</a><span>Hot dog</span></div>
             <div class="odkaz"><div class="ko"></div><a href="#">ÚKOL 02</a><span>-</span></div>
             <div class="odkaz"><div class="ko"></div><a href="#">ÚKOL 03</a><span>-</span></div>
             <div class="odkaz"><div class="ko"></div><a href="#">ÚKOL 04</a><span>-</span></div>
